# flask_sample

./: Dockerfile  docker-compose.yml  pyproject.toml
.circleci/: config.yml
app/: app.py  requirements.txt
app/templates/: index.html
