[tool.poetry]
name = "sample_app"
version = "0.1.0"
description = ""
authors = ["kg534 <kg-katsu08@i.softbank.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
Flask-WTF = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
